--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="likes/index.html">likes</a>
         <a href="resume/index.html">RESUME</a>
         <a href="apl/index.html">APi</a>
+        <a href="table/index.html">Table</a>
         
     </div>
 </body>
